--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>鑫业小程序管理</title>
-  <!-- <script src="static/particles/js/particles.js"></script> -->
+  <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.11&key=c4ae94dfeff44d8499ddb19daf192640"></script> 
 </head>
 
 <body>
